# rekon

./: .gitmodules  COMBINED.md  README.md  combine.sh  install.sh  oxfmt.config.js  oxlint.config.js  package.json  pnpm-lock.yaml  rekon.ts  tsconfig.json  tsdown.config.ts  vitest.config.ts
.beads/: issues.jsonl
.config/: nextest.toml
.transcript/: PLAN-combine.md  PLAN-combine.transcript.md
command/: combine.ts  install-commands.ts
doc/: plan-parallelize.md  variant-analysis.md
doc/adr/: 001-opencode-model-config-cli.md
prompt/: cli-development-with-gunshi.md  cli.md  codanna.md  codanna.md.url  comp-act.md  initial-project-plan.md  llama4scout-anon.md  llama4scout-fake.md  opencode  opencode-session  page-scripting.md  plan.md  rust-cli.md  rust-cli.md.url  uri-axiom-of-web-architecture.glm47.img-prompt  uri-axiom-of-web-architecture.k2.md
prompt/opencode/: anthropic.txt.url  copilot-gpt-5.txt.url  gemini.txt.url  plan.txt.url  qwen.txt  qwen.txt.url
prompt/uri/: TODO-uri-axiom-img-files.md  axiom-uri-img.celtic-knotwork.glm47.md  axiom-uri-img.constellation-stellar.glm47.md  axiom-uri-img.fractal-geometry.glm47.md  axiom-uri-img.mandala.glm47.md  (+23 more)
provider/: opencode-model-config.json
src/: lib.rs  ui.rs
tests/: variant_generation.rs
util/: github2raw.sh
variance/: Cargo.toml  README.md
variance/src/: cache.rs  cli.rs  config.rs  main.rs  models.rs  ui.rs
variance/tests/fixtures/: full-config.json  invalid-budget-config.json  malformed-json-config.json  minimal-config.json  missing-fields-config.json  over-budget-config.json
(+5 files in other folders)
